# Pacman-task

./: CMakeLists.txt  GraphicsFrameworkSample.pro  Pacman.pro  README.md  customgraphicsview.cpp  customgraphicsview.h  directions.cpp  directions.h  dragitem.cpp  dragitem.h  game.cpp  game.h  gameelement.cpp  gameelement.h  gamewindow.cpp  gamewindow.h  hostile.cpp  hostile.h  itemsfactory.cpp  itemsfactory.h  itemswidget.cpp  itemswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pacmangame.cpp  pacmangame.h  pacmanitem.cpp  pacmanitem.h  player.cpp  player.h  redactor.cpp  redactor.h  redactor.ui  resource.qrc  scene.cpp  scene.h  sceneitem.cpp  sceneitem.h  (+4 more)
pacmanarea/: pacmanarea.cpp  pacmanarea.h
pacmanarea/dragitem/: abstractdragitem.cpp  abstractdragitem.h  coindragitem.cpp  coindragitem.h  dragitemfabric.cpp  dragitemfabric.h  walldragitem.cpp  walldragitem.h
pacmanarea/droppablearea/: droppablearea.cpp  droppablearea.h
pacmanarea/pacman/: pacmanitem.cpp  pacmanitem.h
src/: game.cpp  game.h
src/dragitem/: dragitem.cpp  dragitem.h
src/figures_widget/: figure.hpp  figures_list.hpp
src/itemswidget/: itemswidget.cpp  itemswidget.h
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
src/scene/: scene.cpp  scene.h  scene.hpp
src/scene/objects/: coin.hpp  pacman.hpp  scene_object.hpp  wall.hpp
src/scene_items/: itemsfactory.cpp  itemsfactory.h  sceneitem.cpp  sceneitem.h
